[package]
name = "kkv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kkv"
path = "src/lib.rs"


[dependencies]
memmap2 = "0.5.3"
dashmap = "5.3.3"
rand = "0.8.5"
crossbeam = "0.8.1"
tokio = {version = "1.18.2", features = ["full"]}